syntax = "proto3";
package simplems;

service SimpleMS {
  rpc Add (AddRequest) returns (AddResponse) {}
}

message AddRequest {
  int32 i = 1;
  int32 j = 2;
}

message AddResponse {
  int32 result = 1;
}